force-app/main/default/objects/Loan_Disbursement_Details__c/Loan_Disbursement_Details__c.object-meta.xml
<CustomObject>
    <label>Loan Disbursement Details</label>
    <nameField>
        <displayFormat>LD-{00000}</displayFormat>
        <label>Loan Disbursement Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Loan Disbursement Details</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>