force-app/main/default/objects/Loan_Disbursement_Details__c/fields/APF__c.field-meta.xml
<CustomField>
    <fullName>APF__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>APF</label>
    <referenceTo>APF__c</referenceTo>
    <relationshipLabel>Loan Disbursement Details</relationshipLabel>
    <relationshipName>Loan_Disbursement_Details</relationshipName>
    <type>Lookup</type>
</CustomField>