force-app/main/default/objects/Loan_Disbursement_Details__c/fields/Applicable_Connector_Fee__c.field-meta.xml
<CustomField>
    <fullName>Applicable_Connector_Fee__c</fullName>
    <label>Applicable Connector Fee</label>
    <precision>14</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>