force-app/main/default/objects/Loan_Disbursement_Details__c/fields/Applicable_Net_Connector_Fee__c.field-meta.xml
<CustomField>
    <fullName>Applicable_Net_Connector_Fee__c</fullName>
    <label>Applicable Net Connector Fee</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>