force-app/main/default/objects/Loan_Disbursement_Details__c/fields/Connector_Fee_Ladder__c.field-meta.xml
<CustomField>
    <fullName>Connector_Fee_Ladder__c</fullName>
    <label>Connector Fee (Ladder)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>