force-app/main/default/objects/Loan_Disbursement_Details__c/fields/Customer__c.field-meta.xml
<CustomField>
    <fullName>Customer__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Customer</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>Loan Disbursement Details</relationshipLabel>
    <relationshipName>Loan_Disbursement_Details</relationshipName>
    <type>Lookup</type>
</CustomField>