force-app/main/default/objects/Loan_Disbursement_Details__c/fields/Disbursement_Type__c.field-meta.xml
<CustomField>
    <fullName>Disbursement_Type__c</fullName>
    <label>Disbursement Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>First Disbursement</fullName>
            </value>
            <value>
                <fullName>Partial</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>