force-app/main/default/objects/Loan_Disbursement_Details__c/fields/GST_on_Connector_Fee__c.field-meta.xml
<CustomField>
    <fullName>GST_on_Connector_Fee__c</fullName>
    <label>GST on Connector Fee</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>