force-app/main/default/objects/Loan_Disbursement_Details__c/fields/Instrument_Date__c.field-meta.xml
<CustomField>
    <fullName>Instrument_Date__c</fullName>
    <label>Instrument Date</label>
    <type>Date</type>
</CustomField>