force-app/main/default/objects/Loan_Disbursement_Details__c/fields/Invoice_Raised__c.field-meta.xml
<CustomField>
    <fullName>Invoice_Raised__c</fullName>
    <label>Invoice Raised</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>