force-app/main/default/objects/Loan_Disbursement_Details__c/fields/Ladder_Applied__c.field-meta.xml
<CustomField>
    <fullName>Ladder_Applied__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Ladder Applied</label>
    <type>Checkbox</type>
</CustomField>