force-app/main/default/objects/Loan_Disbursement_Details__c/fields/Net_Gross__c.field-meta.xml
<CustomField>
    <fullName>Net_Gross__c</fullName>
    <formula>Loan__r.Net_Gross__c</formula>
    <label>Net/Gross</label>
    <type>Text</type>
</CustomField>