force-app/main/default/objects/Loan_Disbursement_Details__c/fields/Other_Deductions__c.field-meta.xml
<CustomField>
    <fullName>Other_Deductions__c</fullName>
    <label>Other Deductions</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>