force-app/main/default/objects/Loan_Disbursement_Details__c/fields/Payout_On__c.field-meta.xml
<CustomField>
    <fullName>Payout_On__c</fullName>
    <label>Payout On</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Disbursement Amount</fullName>
            </value>
            <value>
                <fullName>Sanction Amount</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>