force-app/main/default/objects/Loan_Disbursement_Details__c/fields/Reco_Comments__c.field-meta.xml
<CustomField>
    <fullName>Reco_Comments__c</fullName>
    <label>Reco Comments</label>
    <length>55</length>
    <type>Text</type>
</CustomField>