force-app/main/default/objects/Loan_Disbursement_Details__c/fields/Total_Connector_Fee_to_be_Received__c.field-meta.xml
<CustomField>
    <fullName>Total_Connector_Fee_to_be_Received__c</fullName>
    <label>Total Connector Fee to be Received</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>